--- a/BlogBee/src/BackEnd/my-app/package.json
+++ b/BlogBee/src/BackEnd/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "my-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,8 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "mysql": "^2.18.1"
-  }
+  "license": "ISC"
 }
