--- a/BlogBee/package.json
+++ b/BlogBee/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "bcrypt": "^5.0.1",
+    "bootstrap-icons": "^1.8.3",
     "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
