--- a/BlogBee/package.json
+++ b/BlogBee/package.json
@@ -11,15 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "bcrypt": "^5.0.1",
     "bootstrap-icons": "^1.8.3",
+    "mat-icon-import": "^0.1.1",
+    "material-icons": "^1.11.1",
     "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
