--- a/BlogBee/package.json
+++ b/BlogBee/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "mat-icon-import": "^0.1.1",
     "material-icons": "^1.11.1",
+    "ng-bootstrap": "^0.46.0",
     "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
