trying to fix display error

--- a/MERN/package.json
+++ b/MERN/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mern",
   "version": "1.0.0",
-  "description": "this is my first npm project",
+  "description": "blog bee project",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
